--- a/Style.css
+++ b/Style.css
@@ -4,8 +4,8 @@ html{
 }
 
 body{
-    
-    margin: 0%;
+    padding-left:2px;
+    margin:0px;
     min-height: 50%;
 }
 
@@ -40,8 +40,16 @@ a{
 }
 
 .section:hover{
-    font-size: 30px;
+    font-size: 22px;
     background-color: rgb(14, 172, 184);
     transition: 1s;
     transition-duration: 1.5s;
+}
+
+footer{
+    display: flex;
+    position: absolute;
+    background-color:rgba(210, 180, 140, 0.6);
+    min-height: 60px;
+    bottom: 0;
 }
